style.css
* {
   box-sizing:border-box;
   cursor: url('img/icons/cursor.png'), auto;
}

html,body
{
	/* eliminate whitespace */
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: visible;
	scrollbar-width: none; /* disable srcrollbar for firefox */
}

/* remove spacing between html elements */
body {
	font-size: 0px;
	/*font-family: Impact;*/
	font-family:Arial Narrow, sans-serif;
	color: goldenrod;
	background-color: black;
}

/* disables scroll bar b/c it messes with % units like margins */
body::-webkit-scrollbar {
	display: none;
}

main {
	position:absolute;
	width: 100%;
	height: calc(100vw * 1080 / 1920);
	background-image: url('img/board.jpg');
	background-size: 100% auto;
	background-repeat: no-repeat;
}

/* ---------------- responsive fit wrapper ----------------
   No-op (display:contents) until fit-screen.js activates .fit-active for
   viewports that don't fit the 16:9 canvas. */
#screen-scale {
	display: contents;
}
#screen-scale.fit-active {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: calc(100vw * 1080 / 1920);
	transform-origin: 0 0;
	/* transform is set inline by fit-screen.js */
	/* Clip so off-canvas elements (e.g. #hand-op) stay hidden once transformed. */
	overflow: hidden;
}
/* While fitting, suppress scrollbars so the letter/pillarbox bars are clean. */
body.fit-active {
	overflow: hidden;
}

/* makes text seleciton and highlighting invisible */
::selection { background: transparent; }		/* WebKit/Blink Browsers */
::-moz-selection { background: transparent; }	/* Gecko Browsers */

::-webkit-scrollbar {
  width: 1.5vw;
}
::-webkit-scrollbar-thumb {
  background: #5559;
  border-radius: .5vw;
  height: 3vw;
  border: .35vw double black;
}
::-webkit-scrollbar-track {
  background: #131313;
}

html {
	scrollbar-color: #5559 #131313; /* mozilla */
}

#click-background {
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: 1;
}

#hand-op {
	position:absolute;
	height: 6.35vw;
	width: 4.45vw;
	top:-7vw;
	left: 33vw;
	
	border: 1px solid blue;
}

#hand-op .card { position : absolute; }

#exit-game
{
	top: 1.4vw;
	left: 1vw;
	position: absolute;
	width: 2vw;
	height: 2vw;
	background-image: url("svg/exit.svg");
	background-repeat: no-repeat;
	background-size: contain;
	opacity: 20%;
	transition: opacity 0.3s;
	pointer-events: auto;
}
#exit-game:hover {
	filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.5));
	opacity: 100%;
}

#match-fullscreen-toggle
{
	top: 1.4vw;
	right: 1vw;
	position: absolute;
	width: 2vw;
	height: 2vw;
	background-image: url("svg/fullscreen.svg");
	background-repeat: no-repeat;
	background-size: contain;
	opacity: 20%;
	transition: opacity 0.3s;
	pointer-events: auto;
	cursor: pointer;
	z-index: 90;
}
#match-fullscreen-toggle:hover {
	filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.5));
	opacity: 100%;
}

/* Touch has no hover, so give these a visible baseline opacity instead of 20%. */
@media (hover: none) {
	#exit-game, #match-fullscreen-toggle {
		opacity: 55%;
	}
}

/* ----------- settings & media player ------------------ */

#youtube {
	position: fixed;
	height: 10px;
	width: 10px;
	display: none;
	z-index: -100;
}

.settings-button {
	position: absolute;
	width: 2.5vw;
	height: 2.5vw;
}
.settings-button>img{
	width: 2.5vw;
	height: 2.5vw;
	filter:drop-shadow(0px 0px 2px black);
}

.settings-button.fade>img {
	 opacity: 0.2; 
}

.settings-button.fade:hover>img {
	opacity: 0.3;
}
.settings-button:hover>img {
	filter:drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.5));
}

#toggle-music {
    top: 48.9vw;
    left: 14vw;
}
#toggle-music.deck-menu {
	top: 45.3vw;
	left: 43.65vw;
	z-index: 86;
}
#toggle-music.lobby-menu {
	position: fixed;
	bottom: 2vh;
	top: auto;
	left: 1.5vw;
	z-index: 95;
}

#toggle-sfx {
	top: 48.9vw;
    left: 17.2vw;
}
#toggle-sfx.deck-menu {
	top: 45.3vw;
	left: 47.05vw;
	z-index: 86;
}
#toggle-sfx.lobby-menu {
	position: fixed;
	bottom: 2vh;
	top: auto;
	left: 5vw;
	z-index: 95;
}

#toggle-notifications {
	top: 48.9vw;
    left: 20vw;
}
#toggle-notifications.deck-menu {
	top: 45.3vw;
	left: 50.45vw;
	z-index: 86;
}
#toggle-notifications.lobby-menu {
	position: fixed;
	bottom: 2vh;
	top: auto;
	left: 8.5vw;
	z-index: 95;
}

#pass-button[data-title]:hover::after
{
	bottom: -2.2vw;
	left: -0.45vw
}


/* ----------- notification bar ------------------ */

#notification-bar {
	position:absolute;
	width:100%;
	height: 14%;
	top: 43%;
	background-color: rgba(10,10,10,0.95);
	opacity: 0;
	z-index: 100;
}

#notification-bar > div { 
	width: 22.1%;
	height: 207.25%;
	top: -66.6%;
	left: 22.55%;
	position: absolute;
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
}

#notification-bar > div::after {
	content: attr(data-text);
	position: absolute;
	left: 100.5%;
	top: 32.1%;
	width: 205%;
	height: 47.25%;
	color: goldenrod;
	font-size: 1.6vw;
	text-align:left;
	font-weight:bold;
	display: flex;
	align-items: center;
}

#notif-me-coin { background-image: url('img/icons/notif_me_coin.png'); }
#notif-op-coin { background-image: url('img/icons/notif_op_coin.png'); }
#notif-round-start { background-image: url('img/icons/notif_round_start.png'); }
#notif-me-pass { background-image: url('img/icons/notif_round_passed.png'); }
#notif-op-pass { background-image: url('img/icons/notif_round_passed.png'); }
#notif-win-round { background-image: url('img/icons/notif_win_round.png'); }
#notif-lose-round { background-image: url('img/icons/notif_lose_round.png'); }
#notif-draw-round { background-image: url('img/icons/notif_draw_round.png'); }
#notif-me-turn { background-image: url('img/icons/notif_me_turn.png'); }
#notif-op-turn { background-image: url('img/icons/notif_op_turn.png'); }
#notif-op-redraw { background-image: url('img/icons/notif_op_turn.png'); }
#notif-north { background-image: url('img/icons/notif_north.png'); }
#notif-monsters { background-image: url('img/icons/notif_monsters.png'); }
/* ... */

